performance fix